--- a/area.html
+++ b/area.html
@@ -27,8 +27,8 @@
         <h3>Por favor, informe seu CPF e código do cliente</h3>
         <div>
             <form action="/action_page.php">
-                <input type="text" id="cpf" name="cpf" value="CPF"><br>
-                <input type="text" id="codigo" name="codigo" value="CÓDIGO DO CLIENTE"><br>
+                <input type="text" id="cpf" name="cpf" placeholder="CPF"><br>
+                <input type="text" id="codigo" name="codigo" placeholder="CÓDIGO DO CLIENTE"><br>
                 <input type="image" img src="icons/entrar.png" style="margin-top: 1em;">
             </form>
         </div>   
